header improvements(no more overlapped by other elements/mobile menu fixed)

--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -7,6 +7,7 @@ header {
     top: 0;
     transition: top .2s;
     background: $black;
+    z-index: 99;
 
     .logo {
         position: relative;
@@ -36,6 +37,9 @@ header {
                 position: fixed;
                 top: 0;
                 bottom: 0;
+                left: 0;
+                right: 0;
+                padding-left: 8vw;
                 height: 100vh;
                 width: 100%;
                 z-index: 99;
